--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "url": "https://github.com/grundstein/file-store/issues"
   },
   "dependencies": {
-    "@grundstein/mem-store": "github:grundstein/mem-store",
-    "@magic/error": "0.0.20",
-    "@magic/fs": "0.0.35",
-    "@magic/log": "0.1.20",
-    "@magic/mime-types": "0.0.21",
-    "@magic/types": "0.1.29"
+    "@grundstein/mem-store": "0.0.1",
+    "@magic/error": "0.0.21",
+    "@magic/fs": "0.0.37",
+    "@magic/log": "0.1.21",
+    "@magic/mime-types": "0.0.22",
+    "@magic/types": "0.1.31"
   },
   "devDependencies": {
     "@magic/format": "0.0.68",
-    "@magic/test": "0.2.24",
+    "@magic/test": "0.2.26",
     "typescript": "5.9.3"
   },
   "keywords": [
